# range_downloader

./: .gitignore  LICENSE  MANIFEST.in  README.md  config.template.toml  pyproject.toml
.github/workflows/: build.yml
src/range_downloader/: __main__.py  config.py  downloader.py
